Write data to and read from FireBase.

--- a/client/src/firebase/.env
+++ b/client/src/firebase/.env
@@ -1,7 +1,7 @@
-REACT_APP_apiKey = AIzaSyDauC5xywKpwLy_WBOj6aaIVr0tAa0z4Rs
-REACT_APP_authDomain = oa-virtoffice-project.firebaseapp.com
-REACT_APP_projectId = oa-virtoffice-project
-REACT_APP_storageBucket = oa-virtoffice-project.appspot.com
-REACT_APP_messagingSenderId = 416890512159
-REACT_APP_appId = 1:416890512159:web:59d7b08b2333270e6f062a
-REACT_APP_measurementId = G-JDJCEPS4YH
+REACT_APP_apiKey=AIzaSyCptJ6Y4k9iFNrzXrqDS1Lz2_7L-RjOl-c
+REACT_APP_authDomain=oa-office-3c23f.firebaseapp.com
+REACT_APP_projectId=oa-office-3c23f
+REACT_APP_storageBucket=oa-office-3c23f.appspot.com
+REACT_APP_messagingSenderId=773587442263
+REACT_APP_appId=1:773587442263:web:4d189164c0060e42836112
+REACT_APP_measurementId=G-925VE0KJP3
